# distributed-pipeline

./: CMakeLists.txt  README.md  pipe1.xml  pipedeploy.xml  pipeline.cpp
